# simos

./: .gitignore  .gitignore.swp  .gitmodules  LICENSE  config.js  package-lock.json  package.json  pathConfig-org.js
config/: langConfig.js  pathConfig-org.js
docs/userGuideAsciiDoc/: Makefile  Userguide_SIMOS_Ext.html  Userguide_SIMOS_Int.html  abbrevations.adoc  appendix_a.adoc  classes.adoc  examples.adoc  introduction.adoc  main_ext.adoc  main_int.adoc  simos.adoc  test.adoc
example/: generate.sh  pathConfig.js
example/pygen_example/: pathConfig.js  script.js  shs-line.bat  shs.bat
generator/: Generator.js  commonLangBase.js  config.js  generator.js  matlabBase.js  package.json  pythonBase.js
generator/lang/: CommonLangBase.js  ModelParser.js
lang/fortran/generator/packaging/template/: CMakeLists.txt  readme.md
lang/fortran/generator/packaging/template/cmake/: customlibsettings.cmake  libdependencies.cmake  libsources.cmake
lang/fortran/generator/packaging/template/tests/: CMakeLists.txt
lang/fortran/generator/packaging/template/tests/cmake/: testsources.cmake
libraries/marmo_data_models/: marmo_r1_packExtDeps.txt
models/dudgeon_r1/: __versions__.json
models/dudgeon_r2/: InstrSensor.json  Model.json  Study.json  VideoCamera.json  WaveMaker.json
models/freves_r1/: SeaState.json  Spectrum.json
models/leviathanFPSO_r01/: EnvCurrent.json  EnvWave.json  EnvWaveCurrent.json  EnvWind.json  Floater.json  FloaterFPSO.json  FloaterLoading.json  InstrCurrentSensor.json  InstrForceSensor.json  InstrRGWaveGauge.json  InstrWaveGauge.json  InstrWindSensor.json  MooringFull.json  MooringHoriz.json  MooringLine.json  MooringRigid.json  VideoCamera.json
models/libraRoll_r1/: Scenario.json
models/pvc2droll_r1/: DomainStudy.json  Geometry.json
models/simaTestProg_r1/: DataModel.json
models/struclib_r1/: Signal.json  Test.json
models/trawl_r01/: InstrForceSensor.json  TrawlDoor.json
models/varuna_r1/: Traj.json
models/veres2DRoll_r1/: Scenario.json
releng/: build.bat  build.sh  config.bat  test.bat  test.sh
service/: how to run flask.txt  server.py
service/test/: client.py
simosf/makeCmds/: fcore.txt
simosjs/generator/: Generator.js
simosjs/njs/: njs.js  package.json
simospy/: .gitignore  DESCRIPTION.rst  setup.py
(+564 files in other folders)
